DOM Array Methods

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
 
 *,
 *::after,
@@ -19,5 +19,64 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    background: #f4f4f4;
+}
+
+.container {
+    display: flex;
+    padding: 2rem;
+    margin: 0 auto;
+    max-width: 100%;
+    width: 80rem;
+}
+
+aside {
+    padding: 1rem 2rem;
+    width: 25rem;
+    border-right: .1rem solid #111;
+}
+
+button {
+    background-color: #fff;
+    border: solid .1rem #111;
+    border-radius: .5rem;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    font-weight: bold;
+    font-size: 1.4rem;
+}
+
+main {
+    flex: 1;
+    padding: 1rem 2rem;
+}
+
+h2 {
+    border-bottom: .1rem solid #111;
+    padding-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 2rem;
+    font-weight: 300;
+}
+
+h3 {
+    border-bottom: .1rem solid #111;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    margin: 2 0 0rem;
+    font-weight: 300;
+    background-color: #fff;
+}
+
+.person {
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
+    margin-bottom: 1rem;
 }
